[workspace]
members = ["dsav-core", "dsav-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
authors = ["DSAV Contributors"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[profile.dev-optimized]
inherits = "dev"
opt-level = 2

[workspace.dependencies]
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glow = "0.16"
egui = "0.30"
egui_glow = { version = "0.30", features = ["winit"] }
glam = { version = "0.28", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
